--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -22,3 +22,4 @@ jobs:
       - run: |
           pip3 install -q selenium==4.9.0
           python3 ./main.py -U ${{ secrets.USERNAME }} -P ${{ secrets.PASSWORD }} -C ${{ secrets.URL }}
+          curl ${{ secrets.URL }}
