--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -13,18 +13,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: Install dependencies
+        run: npm install
+
       - name: Open website
         run: |
-          # 安装必要的依赖（例如，Chrome浏览器）
-          # 这里的命令根据你的具体需求进行修改
-          sudo apt-get update
-          sudo apt-get install -y chromium-browser
-
-          # 打开网站（这里以示例网站 https://example.com 为例）
-          chromium-browser --headless --disable-gpu --remote-debugging-port=9222 https://ide-run.goorm.io/workspace/d9Sssb0cUEnisCoRCgX?token=d04702b4519674ab9a512f72b1bae53d&guestname=12 &
-
-          # 等待1分钟
-          sleep 60
-
-          # 关闭 Chrome 进程
-          kill $(pgrep chromium-browser)
+          npm run open-website
