--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -32,6 +32,7 @@ jobs:
           pip install --upgrade pip
           pip install git+https://github.com/openai/whisper.git
           pip install Pillow pyscreenshot
+          pip install pyvirtualdisplay
           pip install -r ./requirements.txt
           
       - name: Delete old workflow runs
