--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -23,11 +23,12 @@ jobs:
 
       - name: Setup Environment
         run: |
+          sudo apt-get install -y xvfb firefox
           pip install --upgrade pip
           pip install git+https://github.com/openai/whisper.git
           pip install Pillow pyscreenshot
           pip install pyvirtualdisplay
-          pip install -r ./requirements.txt
+          pip3 install seleniumbase xvfbwrapper
           
       - name: Delete old workflow runs
         uses: MajorScruffy/delete-old-workflow-runs@v0.3.0
@@ -46,4 +47,4 @@ jobs:
           
       - name: Checkin
         run: |  
-          xvfb-run python3 ./main.py
+          python3 ./web_access.py
