--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -1,6 +1,9 @@
-# This is a basic workflow to help you get started with Actions
-name: Checkin
+name: Run SeleniumBase
+
 on:
+  push:
+    branches: [ main ]
+
   schedule:
     # UTC (国内 UTC+8)
     - cron: '01 4 * * *'
@@ -8,43 +11,24 @@ on:
   workflow_dispatch:
 
 jobs:
-  Checkin:
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        
-      - name: Setup Python version
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-          cache: 'pip' # caching pip dependencies
+  build:
 
-      - name: Setup Environment
-        run: |
-          sudo apt-get install -y xvfb firefox
-          pip install --upgrade pip
-          pip install git+https://github.com/openai/whisper.git
-          pip install Pillow pyscreenshot
-          pip install pyvirtualdisplay
-          pip3 install seleniumbase xvfbwrapper
-          
-      - name: Delete old workflow runs
-        uses: MajorScruffy/delete-old-workflow-runs@v0.3.0
-        with:
-          repository: ${{ github.repository }}   # replace this with your own repository such as >> owner/repo
-          older-than-seconds: 86400          # remove all workflow runs older than 1 day >> 24*60*60=86400
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
-      - name: Setup FFmpeg using versions
-        uses: Iamshankhadeep/setup-ffmpeg@v1.2
-        with:
-          # Not strictly necessary, but it may prevent rate limit
-          # errors especially on GitHub-hosted macos machines.
-          token: ${{ secrets.GITHUB_TOKEN }}
-          
-      - name: Checkin
-        run: |  
-          python3 ./web_access.py
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Run SeleniumBase script
+      run: |
+        pytest goorm.py
