--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -1,14 +1,11 @@
-name: Run SeleniumBase
+name: Keep Goorm Alive
 
 on:
   push:
     branches: [ main ]
-
+  workflow_dispatch:  # 允许手动触发
   schedule:
-    # UTC (国内 UTC+8)
-    - cron: '01 4 * * *'
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    - cron: '0 * * * *'  # 每小时运行一次
 
 jobs:
   build:
